<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryLight"></RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_background"
        android:elevation="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30px"
            android:text="@string/order"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="65px" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="302dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="173dp"
            android:text="Choose your delivery type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clientFirstName"
            android:layout_width="116dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="77dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clientLastName"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:layout_alignTop="@+id/clientFirstName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="89dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clientCardNumber"
            android:layout_width="222dp"
            android:layout_height="38dp"
            android:layout_alignStart="@+id/clientFirstName"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="125dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/cardExpiryDate"
            android:layout_width="69dp"
            android:layout_height="37dp"
            android:layout_alignTop="@+id/clientCardNumber"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/clientCardNumber"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/deliverySpinner"
            android:layout_width="301dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="223dp"
            android:entries="@array/spinnerDelivery" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="302dp"
            android:layout_height="34dp"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="271dp"
            android:text="More about delivery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="85dp"
            android:text="Total: 0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <Button
            android:id="@+id/uberEats"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_alignStart="@+id/clientFirstName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/uber"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <Button
            android:id="@+id/skipTheDishes"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/uberEats"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/skipTheDishes"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="19dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/placeOrder"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="9pt" />
    </RelativeLayout>

</RelativeLayout>